--- a/IdleBattler Web/IdleBattler Web/Shared/NavMenu.razor
+++ b/IdleBattler Web/IdleBattler Web/Shared/NavMenu.razor
@@ -15,13 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="arena">
-                <span class="oi oi-plus" aria-hidden="true"></span> Arena
+            <NavLink class="nav-link" href="barracks" Match="NavLinkMatch.All">
+                <span class="oi bi-bandaid" aria-hidden="true"></span> Barracks
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi bi-shop-window" aria-hidden="true"></span> Shop
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi bi-cash" aria-hidden="true"></span> Factory
             </NavLink>
         </div>
     </nav>
