--- a/IdleBattler Web/IdleBattler Web/Shared/NavMenu.razor
+++ b/IdleBattler Web/IdleBattler Web/Shared/NavMenu.razor
@@ -20,13 +20,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="shop" Match="NavLinkMatch.All">
                 <span class="oi bi-shop-window" aria-hidden="true"></span> Shop
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="factory" Match="NavLinkMatch.All">
                 <span class="oi bi-cash" aria-hidden="true"></span> Factory
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="craft" Match="NavLinkMatch.All">
+                <span class="oi bi-hammer" aria-hidden="true"></span> Craft
             </NavLink>
         </div>
     </nav>
