--- a/IdleBattler Web/IdleBattler Razor Pages/Components/Homepage/ArenaList.razor
+++ b/IdleBattler Web/IdleBattler Razor Pages/Components/Homepage/ArenaList.razor
@@ -23,7 +23,7 @@
                          <div class="form-check">
                             <input class="form-check-input" type="radio" name="fighterRadioSelection" id="@($"radio-{fighter.Id}")" @onchange="(() => OnFighterSelected(fighter.Id))">
                             <label class="form-check-label" for="flexRadioDefault1">
-                                @fighter.Id
+                                @fighter.Name
                             </label>
                         </div>
                     }
